# quickinsight

./: .gitignore  pyproject.toml  sample.csv  spec.md
quickinsight/: cli.py  db.py  llm.py  server.py
quickinsight/static/: index.html
